instance.tf
resource "aws_instance" "geloetheimer" {
    ami = "ami-9d23aeea"
    instance_type = "t2.micro"
    key_name = "soenke"
    subnet_id = "${aws_subnet.main.id}"
    security_groups = ["${aws_security_group.allow_all.id}"]
}

resource "aws_security_group" "allow_all" {
  name = "allow_all"
  description = "Allow all inbound traffic"

  ingress {
      from_port = 0
      to_port = 65535
      protocol = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
  }

  tags {
    Name = "allow_all"
  }

  vpc_id = "${aws_vpc.main.id}"

}
